Fixed overlapping issue on scrolling mobile row layout

--- a/src/stylesheets/_steps.scss
+++ b/src/stylesheets/_steps.scss
@@ -8,6 +8,9 @@
 
 .mobile-horizontal-scroll {
   display: block;
+	.row {
+		width: auto;
+	}
 }
 
 .wrap {
